fix: display logic and alignment issue for transition category name

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -275,7 +275,8 @@ body.youlag-active:not(.reader) main#stream {
   &.yl-page-playlists:not([class*="yl-page-t_"]) {
     /* Set transition name to "Playlists" only on parent pages. */
     main#stream {
-      .transition .name {
+      .transition .name,
+      #new-article + .transition .name {
         font-size: 0;
         
         &:before {
@@ -289,7 +290,8 @@ body.youlag-active:not(.reader) main#stream {
   &.yl-page-watch_later {
     /* Set transition name to "Watch later" only on parent pages. */
     main#stream {
-      .transition .name {
+      .transition .name,
+      #new-article + .transition .name {
         font-size: 0;
         
         &:before {
@@ -300,69 +302,6 @@ body.youlag-active:not(.reader) main#stream {
     }
   }
 
-  .transition .name {
-    color: #6f6f6f;
-    /* Hide category name (except for the first one) on date transition. */
-    display: none;
-  }
-
-  #new-article + .transition .name {
-    /* Show category name for the first date transition. */
-    display: block;
-    opacity: 1;
-    font-size: var(--yl-text-md);
-    text-align: left;
-    text-transform: none;
-    padding: 0;
-    margin-top: var(--yl-m-md);
-    margin-bottom: var(--yl-m-md);
-  }
-
-  .transition {
-    /* Hide transition dates for video feeds, keeping rest of styling intact,
-      in case this ends up becoming an option in the extension settings instead. */
-    display: none !important;
-
-    /* Global: Date transition in feeds */
-    display: flex;
-    flex-direction: column-reverse; /* Place category name above date transition label. */
-    text-align: left;
-    font-weight: 400;
-    letter-spacing: 0;
-    text-transform: none;
-    line-height: 1;
-    margin: var(--yl-m-md) 0 var(--yl-m-2xs) 0;
-    padding: 0;
-
-    .transition-value {      
-      a {
-        color: var(--frss-font-color-grey-dark);
-      }
-    }
-
-
-    .transition-next {
-      font-size: 0;
-      margin-left: 4px;
-      opacity: 1;
-
-      &:before {
-        content: "→";
-        line-height: 1;
-        color: #ababab;
-        border: 1px solid hsla(0,0%,100%,.14);
-        background-color: hsla(0,0%,100%,.10);
-        width: 18px;
-        height: 18px;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 6px;
-        font-size: var(--yl-text-sm);
-        font-family: monospace;
-      }
-    }
-  }
 
   nav.aside.aside_feed {
     #mark-read-aside ul#sidebar {
@@ -377,6 +316,7 @@ body.youlag-active:not(.reader) main#stream {
 
           &:before {
             content: "Playlists";
+            line-height: 1;
           }
         }
 
@@ -410,6 +350,7 @@ body.youlag-active:not(.reader) main#stream {
 
           &:before {
             content: "Watch later";
+            line-height: 1;
           }
         }
       }
@@ -718,9 +659,6 @@ nav.aside.aside_feed {
     top: calc(50px + 52px); /* Padding-top of container + height of "Subscriptions management" button */
   }
 }
-
-
-
 
 @media (max-width: 840px) {
   .header {
@@ -1094,6 +1032,72 @@ main#stream #stream-footer,
 
 }
 
+main#stream {
+  .transition {
+    /* Hide all date transitions by default. Then later, enable the first date transition, used as a page title through the category name '.transition .name'. */
+    display: none;
+  }
+
+  #new-article + .transition {
+    /* Global: Date transition in feeds, only the first one. */
+    display: flex;
+    flex-direction: column-reverse; /* Place category name above date transition label. */
+    text-align: left;
+    font-weight: 400;
+    letter-spacing: 0;
+    text-transform: none;
+    line-height: 1;
+    margin-top: 0;
+    padding: 0;
+
+    .name {
+      /* Show category name for the first date transition. */
+      display: block;
+      opacity: 1;
+      font-size: var(--yl-text-md);
+      text-align: left;
+      text-transform: none;
+      margin: var(--yl-m-md) 0;
+      color: #ffffff;
+      font-weight: bold;
+      line-height: 1;
+    }
+
+
+    .transition-value {     
+      /* Hide transition dates for video feeds, keeping rest of styling intact,
+        in case this ends up becoming an option in the extension settings instead. */
+      display: none;
+      
+      a {
+        color: var(--frss-font-color-grey-dark);
+      }
+    }
+
+    .transition-next {
+      font-size: 0;
+      margin-left: 4px;
+      opacity: 1;
+
+      &:before {
+        content: "→";
+        line-height: 1;
+        color: #ababab;
+        border: 1px solid hsla(0,0%,100%,.14);
+        background-color: hsla(0,0%,100%,.10);
+        width: 18px;
+        height: 18px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 6px;
+        font-size: var(--yl-text-sm);
+        font-family: monospace;
+      }
+    }
+  }
+
+}
 
 .youlag-active {
   main#stream {
@@ -1101,17 +1105,20 @@ main#stream #stream-footer,
       /* youlag-active: first date transition */
       display: block;
       grid-column: 1 / -1;
-      padding: 0 var(--yl-p-2xs);
+      padding: 0 var(--yl-p-2xs); /* Align category name with thumbnail opposed to card container (which is not visible until hover on desktop). */
       line-height: 1.2;
-      margin-top: var(--yl-m-md);
-      margin-bottom: var(--yl-m-sm);
       font-size: var(--yl-text-md);
+
+      @media (max-width: 840px) {
+        padding: 0; /* Align category name with card container on mobile, as the container is visible on mobile devices by default. */
+      }
     }
 
     @media (max-width: 840px) {      
+
       /* Mobile: first date transition, display the category name only */
       #new-article + .transition {
-        display: block !important;
+        display: block;
   
         & > .transition-value {
           display: none;
@@ -1119,10 +1126,9 @@ main#stream #stream-footer,
     
         & > .name {
           /* Category name */
-          display: block !important;
+          display: block;
           color: #ffffff;
           padding: 0;
-          margin-top: 0.5rem;
         }
   
       }
@@ -1210,11 +1216,6 @@ nav.nav_menu {
     }
   }
 }
-
-
-
-
-
 
 a.signout img.icon {
   display: none;
@@ -2769,11 +2770,13 @@ body.youlag-inactive:not(.reader) main#stream {
     padding-right: var(--yl-p-2xs);
   }
 
-  #new-article + .transition + .flux {
-    /* youlag-inactive: Add margin to first article, as youlag hides the date transition that initially added spacing. */
-    margin-top: var(--yl-m-md);
-  }
+  .transition {
 
+    .name {
+      padding-left: var(--yl-p-xs); /* youlag-inactive: Align category name article thumbnail. */
+      box-sizing: border-box;
+    }
+  }
 
   div.flux {
     border-radius: 12px;
@@ -3169,6 +3172,10 @@ body.youlag-active.yl-page-watch_later:not(.reader) main#stream {
     &.favorite {
       background: none !important; /* Revert to normal background on favorites (watch later) page */
 
+      @media (max-width: 840px) {
+        background: linear-gradient(209deg, #4d4b4b 0%, #212124 40%, #333 100%) !important;
+      }
+
       &:hover {
         background: linear-gradient(209deg, #4d4b4b 0%, #212124 40%, #333 100%) !important;
       }
@@ -3558,7 +3565,7 @@ body {
       z-index: 20;
       transition: 0.4s;
       opacity: 1;
-      box-shadow: 0px -4px 14px 0px var(--yl-color-body-background); /* Cover content that peeks through, like '#first_load.loading', the FreshRSS feed loading spinner. */
+      box-shadow: 0px -4px 14px 10px var(--yl-color-body-background); /* Cover content that peeks through, like '#first_load.loading', the FreshRSS feed loading spinner. */
     }
   }
 
